# input-modifier

./: CMakeLists.txt  README.md  eventnames.sh
doc/: README.md
doc/advanced/: 1-mappings.md  README.md
doc/basic/: 1-installation.md  2-startup.md  3-devices.md  4-keybinds.md  5-macros.md  6-profiles.md  README.md  devices.md  installation.md  keybinds.md  macros.md  profiles.md  startup.md
doc/reference/: README.md
doc/reference/command/: README.md  addaction.md  clearactions.md  clearmacro.md  copyactions.md  copymacro.md  copymap.md  copyprofile.md  delaction.md  delmacro.md  delmacroact.md  delmap.md  delprofile.md  disable.md  enable.md  insmacroact.md  listactions.md  listbinds.md  listdevices.md  listmacros.md  listmaps.md  listprofiles.md  newmacro.md  newmap.md  newprofile.md  recordmacro.md  showmacro.md  switchmap.md  switchprofile.md  version.md  whichkey.md
doc/reference/internal/: README.md  plugin-bts.md
etc/xdg/autostart/: input-modifier.desktop
lib/udev/rules.d/: 99-imod.rules
src/autostart/: imodd-wrapper.in
src/cli/: cli.c  main.cpp
src/daemon/: command.cpp  device.cpp  imodd.h  listener.cpp  log.cpp  main.cpp  names.c  names.h  plugin.cpp  scanner.cpp  socket.cpp  state.cpp  time.cpp
src/daemon/plugin/: skeleton.h
src/daemon/plugin/razer/: CMakeLists.txt  dbus.cpp  razer.cpp  razer.h
src/daemon/plugin/test/: CMakeLists.txt  test.cpp  test.h
src/helper/: log.cpp  main.cpp  uinputHelper.h
src/installer/: 98-imod-ubuntu14.rules  install  makeinstall  uninstall
src/json/: notes.md
